--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
 
         <div class="img">
             <video class="my-video" autoplay loop muted playsinline>
-                <source src="/котел (online-video-cutter.com).mp4" type="video/mp4" />
+                <source src="котел (online-video-cutter.com).mp4" type="video/mp4" />
                 Ваш браузер не поддерживает тег видео.
             </video>
         </div>
@@ -363,4 +363,5 @@
     </div>
 
 </body>
+
 </html> 
