--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
   font-size: 16px;
   cursor: pointer;
   border: none;
-  background-color: #685cd4; /* зеленый цвет */
+  background-color: #e9e06a; /* зеленый цвет */
   color: rgb(0, 0, 0);
   border-radius: 4px;
   transition: background-color 0.2s, transform 0.1s, box-shadow 0.2s;
@@ -288,7 +288,7 @@ button:active {
 
         <div class="img">
             <video class="my-video" autoplay loop muted playsinline>
-                <source src="/котел (online-video-cutter.com).mp4" type="video/mp4" />
+                <source src="котел (online-video-cutter.com).mp4" type="video/mp4" />
                 Ваш браузер не поддерживает тег видео.
             </video>
         </div>
