--- a/index.html
+++ b/index.html
@@ -240,6 +240,84 @@ button:active {
                 opacity: 0.2; /* Еще более прозрачная на мобильных */
             }
         }
+
+         .marquee {
+    width: 100%;
+    overflow: hidden;
+    white-space: nowrap;
+    box-sizing: border-box;
+  }
+
+  .marquee span {
+    display: inline-block;
+    padding-left: 100%;
+    animation: marquee 20s linear infinite;
+    color: #f5900b;
+    font-size: 25px;
+    font-weight: bold;
+  }
+
+  @keyframes marquee {
+    0% {
+      transform: translate(0, 0);
+    }
+    100% {
+      transform: translate(-100%, 0);
+    }
+  }
+
+    .animated-button {
+    padding: 10px 20px;
+    font-size: 16px;
+    cursor: pointer;
+    border-radius: 10px;
+    border: 2px solid #00ffff;
+    background-color: #222;
+    color: #fff;
+    position: relative;
+    overflow: hidden;
+    animation: pulse 2s infinite ease-in-out;
+    box-shadow: 0 0 10px #00ffff inset, 0 0 20px #00ffff;
+  }
+
+  /* Анимация пульсации для увеличения и уменьшения */
+  @keyframes pulse {
+    0%, 100% {
+      transform: scale(1);
+      box-shadow: 0 0 10px #00ffff inset, 0 0 20px #00ffff;
+    }
+    50% {
+      transform: scale(1.1);
+      box-shadow: 0 0 20px #00ffff inset, 0 0 40px #00ffff;
+    }
+  }
+
+  /* Анимация пробегающего блеска */
+  .animated-button::after {
+    content: "";
+    position: absolute;
+    top: -50%;
+    left: -50%;
+    width: 200%;
+    height: 200%;
+    background: linear-gradient(
+      120deg,
+      transparent,
+      rgba(255, 255, 255, 0.6),
+      transparent
+    );
+    transform: rotate(25deg) translateX(-100%);
+    animation: shine 5s linear infinite;
+  }
+
+  @keyframes shine {
+    0% {
+      transform: rotate(25deg) translateX(-100%);
+    }
+    100% {
+      transform: rotate(25deg) translateX(100%);
+    }
+  }
     </style>
 </head>
 
@@ -254,10 +332,16 @@ button:active {
 
     <!-- Основной контент -->
     <div class="container">
+        <div class="marquee">
+  <span> <b style="font-size: 30px; color: #df0a9f;">Акция до конца 2025 года:
+        К каждому приобретённому котлу дарим телевизор с 2-х метровой диагональю и комплектом спутникового тв, чтобы оператору котельной было не скучно!!! </b></span>
+</div>
  <div class="header">
     <div class="header-top">
         <div style="font-weight: bold; font-size: 20px;">Только у нас!</div>
-       <a href="https://max.ru/u/f9LHodD0cOL9jqM99KpCB4akEJ-gMBj2Kx13Nf3xuMS2ziRt_LqzLWXixBg" target="_blank"><button style="padding: 10px 20px; font-size: 16px; cursor: pointer; border-radius: 10px; ">пишите нам в мах        </button></a> 
+      <a href="https://max.ru/u/f9LHodD0cOL9jqM99KpCB4akEJ-gMBj2Kx13Nf3xuMS2ziRt_LqzLWXixBg" target="_blank" style="text-decoration: none;">
+  <button class="animated-button">пишите нам в мах</button>
+</a>
     </div>
     <br>
     <h3 style="text-align: left;">Единственный на рынке, промышленный котёл отопительный "<span class="red">РПКТЭК - 560 </span>",<br> обеспечивающий стабильный доход, при самых низких тарифах!</h3>
@@ -389,4 +473,5 @@ button:active {
 
 </body>
 </html> 
+
 
