--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@ button:active {
     color: #fff;
     position: relative;
     overflow: hidden;
-    animation: pulse 2s infinite ease-in-out;
+    animation: pulse 3s infinite ease-in-out;
     box-shadow: 0 0 10px #00ffff inset, 0 0 20px #00ffff;
   }
 
@@ -338,7 +338,7 @@ button:active {
 </div>
  <div class="header">
     <div class="header-top">
-        <div style="font-weight: bold; font-size: 20px;">Только у нас!</div>
+        <div style="font-weight: bold; font-size: 20px; margin-right: 5px;">Только у нас!</div>
       <a href="https://max.ru/u/f9LHodD0cOL9jqM99KpCB4akEJ-gMBj2Kx13Nf3xuMS2ziRt_LqzLWXixBg" target="_blank" style="text-decoration: none;">
   <button class="animated-button">пишите нам в мах</button>
 </a>
@@ -473,5 +473,6 @@ button:active {
 
 </body>
 </html> 
+
 
 
